[package]
name = "db-wrap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
server = ["rocket", "rocket_contrib"]

[dependencies]
anyhow = "1.0"
log = "0.4.14"
toml = "0.5.8"
rocksdb = "0.14.0"
rocket = { version = "0.4.11", optional = true }
rocket_contrib = { version = "0.4.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12.1"
sha2 = "0.8"
hex = "0.4.0"
